# tatami_mult

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  create-tag.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  classes.html  dense-blocking.html  dense-blocking.md  dense__column_8hpp_source.html  dense__dot__product_8hpp_source.html  dense__matrix_2dense__column_2column__to__column_8hpp.html  dense__matrix_2dense__column_2column__to__column_8hpp_source.html  dense__matrix_2dense__column_2column__to__row_8hpp.html  dense__matrix_2dense__column_2column__to__row_8hpp_source.html  dense__matrix_2dense__column_2dispatch_8hpp.html  dense__matrix_2dense__column_2dispatch_8hpp_source.html  dense__matrix_2dense__column_2row__to__column_8hpp.html  dense__matrix_2dense__column_2row__to__column_8hpp_source.html  dense__matrix_2dense__column_2row__to__row_8hpp.html  dense__matrix_2dense__column_2row__to__row_8hpp_source.html  dense__matrix_2dense__row_2column__to__column_8hpp.html  dense__matrix_2dense__row_2column__to__column_8hpp_source.html  dense__matrix_2dense__row_2column__to__row_8hpp.html  dense__matrix_2dense__row_2column__to__row_8hpp_source.html  dense__matrix_2dense__row_2dispatch_8hpp.html  dense__matrix_2dense__row_2dispatch_8hpp_source.html  dense__matrix_2dense__row_2row__to__column_8hpp.html  dense__matrix_2dense__row_2row__to__column_8hpp_source.html  dense__matrix_2dense__row_2row__to__row_8hpp.html  dense__matrix_2dense__row_2row__to__row_8hpp_source.html  dense__matrix_2dispatch_8hpp.html  dense__matrix_2dispatch_8hpp_source.html  dense__matrix_2sparse__column_2column__to__column_8hpp.html  dense__matrix_2sparse__column_2column__to__column_8hpp_source.html  dense__matrix_2sparse__column_2column__to__row_8hpp.html  dense__matrix_2sparse__column_2column__to__row_8hpp_source.html  dense__matrix_2sparse__column_2dispatch_8hpp.html  dense__matrix_2sparse__column_2dispatch_8hpp_source.html  dense__matrix_2sparse__column_2row__to__column_8hpp.html  dense__matrix_2sparse__column_2row__to__column_8hpp_source.html  dense__matrix_2sparse__column_2row__to__row_8hpp.html  dense__matrix_2sparse__column_2row__to__row_8hpp_source.html  dense__matrix_2sparse__row_2column__to__column_8hpp.html  (+222 more)
docs/dev/: README.md
docs/general/: accumulators.md  dense-blocking.md  sparse-blocking.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_4.js  classes_7.js  classes_8.js  files_2.js  files_3.js  files_c.js  files_d.js  files_e.js  functions_2.js  functions_8.js  functions_d.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js  variables_0.js  variables_1.js  (+7 more)
include/tatami_mult/: dense_column.hpp  dense_dot_product.hpp  dense_row.hpp  sparse_column.hpp  sparse_dot_product.hpp  sparse_row.hpp  tatami_mult.hpp  utils.hpp
include/tatami_mult/dense_matrix/: dispatch.hpp  utils.hpp
include/tatami_mult/dense_matrix/dense_column/: column_to_column.hpp  column_to_row.hpp  dispatch.hpp  row_to_column.hpp  row_to_row.hpp
include/tatami_mult/dense_matrix/dense_row/: column_to_column.hpp  column_to_row.hpp  dispatch.hpp  row_to_column.hpp  row_to_row.hpp
include/tatami_mult/dense_matrix/sparse_column/: column_to_column.hpp  column_to_row.hpp  dispatch.hpp  row_to_column.hpp  row_to_row.hpp
include/tatami_mult/dense_matrix/sparse_row/: column_to_column.hpp  column_to_row.hpp  dispatch.hpp  row_to_column.hpp  row_to_row.hpp
include/tatami_mult/multiple_vectors/: dense_column.hpp  dense_row.hpp  dispatch.hpp  sparse_column.hpp  sparse_row.hpp
include/tatami_mult/multiple_vectors/dense_column/: internal.hpp  public.hpp
include/tatami_mult/multiple_vectors/dense_row/: internal.hpp  public.hpp
include/tatami_mult/multiple_vectors/sparse_column/: internal.hpp  public.hpp
include/tatami_mult/multiple_vectors/sparse_row/: internal.hpp  public.hpp
include/tatami_mult/single_vector/: dense_column.hpp  dense_row.hpp  dispatch.hpp  sparse_column.hpp  sparse_row.hpp
include/tatami_mult/sparse_matrix/: dispatch.hpp  utils.hpp
include/tatami_mult/sparse_matrix/dense_column/: column_to_column.hpp  column_to_row.hpp  dispatch.hpp  row_to_column.hpp  row_to_row.hpp
include/tatami_mult/sparse_matrix/dense_row/: column_to_column.hpp  column_to_row.hpp  dispatch.hpp  row_to_column.hpp  row_to_row.hpp
include/tatami_mult/sparse_matrix/sparse_column/: column_to_column.hpp  column_to_row.hpp  dispatch.hpp  row_to_column.hpp  row_to_row.hpp
tests/: CMakeLists.txt
tests/src/: dense_column.cpp  dense_dot_product.cpp  dense_row.cpp  overlord.cpp  sparse_column.cpp  sparse_dot_product.cpp  sparse_row.cpp  tatami_mult.cpp  utils.cpp  utils.h
tests/src/dense_matrix/: dispatch.cpp
tests/src/dense_matrix/dense_column/: dispatch.cpp
tests/src/dense_matrix/dense_row/: dispatch.cpp
tests/src/dense_matrix/sparse_column/: dispatch.cpp
tests/src/dense_matrix/sparse_row/: dispatch.cpp
tests/src/multiple_vectors/: dense_column.cpp  dense_row.cpp  dispatch.cpp  sparse_column.cpp  sparse_row.cpp
tests/src/multiple_vectors/dense_column/: public.cpp
tests/src/multiple_vectors/dense_row/: public.cpp
tests/src/multiple_vectors/sparse_column/: public.cpp
tests/src/multiple_vectors/sparse_row/: public.cpp
tests/src/single_vector/: dense_column.cpp  dense_row.cpp  dispatch.cpp  sparse_column.cpp  sparse_row.cpp
tests/src/sparse_matrix/: dispatch.cpp
tests/src/sparse_matrix/dense_column/: dispatch.cpp
tests/src/sparse_matrix/dense_row/: dispatch.cpp
tests/src/sparse_matrix/sparse_column/: dispatch.cpp
tests/src/sparse_matrix/sparse_row/: dispatch.cpp
(+5 files in other folders)
